[gd_scene load_steps=6 format=2]

[ext_resource path="res://client/menu/lobby/server_browser.gd" type="Script" id=1]
[ext_resource path="res://client/fonts/DelaGothicOne-32.tres" type="DynamicFont" id=3]
[ext_resource path="res://client/menu/lobby/server_entry.tscn" type="PackedScene" id=4]
[ext_resource path="res://client/menu/menu_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://client/ui/title_label.tscn" type="PackedScene" id=7]

[node name="ServerBrowser" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 1 )
server_entry = ExtResource( 4 )

[node name="ServerRequest" type="HTTPRequest" parent="."]
timeout = 10.0

[node name="Title" parent="." instance=ExtResource( 7 )]
margin_bottom = 111.0
text = "Server Browser"

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.05
anchor_top = 0.13
anchor_right = 0.95
anchor_bottom = 0.9
rect_min_size = Vector2( 1200, 750 )

[node name="EmptyMessage" type="Label" parent="Panel"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.5
margin_top = -24.0
margin_right = 165.5
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
text = "No servers found!"
align = 1
valign = 1

[node name="ErrorMessage" type="Label" parent="Panel"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.5
margin_top = -24.0
margin_right = 165.5
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Error message!"
align = 1
valign = 1

[node name="ServerListContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.98

[node name="Control" type="Control" parent="Panel/ServerListContainer"]
margin_right = 1641.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )

[node name="ServerListHeader" type="HBoxContainer" parent="Panel/ServerListContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Panel/ServerListContainer/Control/ServerListHeader"]
margin_top = 16.0
margin_right = 800.0
margin_bottom = 64.0
rect_min_size = Vector2( 800, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Server Name"

[node name="Label2" type="Label" parent="Panel/ServerListContainer/Control/ServerListHeader"]
margin_left = 804.0
margin_top = 16.0
margin_right = 1104.0
margin_bottom = 64.0
rect_min_size = Vector2( 300, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Players"

[node name="RefreshButton" type="Button" parent="Panel/ServerListContainer/Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -25.5
margin_bottom = 25.5
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Refresh"

[node name="ServerListEntries" type="VBoxContainer" parent="Panel/ServerListContainer"]
margin_top = 84.0
margin_right = 1641.0
margin_bottom = 783.0
size_flags_vertical = 3

[node name="Footer" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackButton" parent="Footer" instance=ExtResource( 6 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -75.0
margin_right = 177.0
margin_bottom = 5.0
label = "Back"
alignment = 1

[connection signal="request_completed" from="ServerRequest" to="." method="_on_ServerRequest_request_completed"]
[connection signal="pressed" from="Panel/ServerListContainer/Control/RefreshButton" to="." method="_on_RefreshButton_pressed"]
[connection signal="pressed" from="Footer/BackButton" to="." method="_on_BackButton_pressed"]
